--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "autoload": {
         "psr-4": {
             "Espier\\Swagger\\": "src"
-        }
+        },
+        "files": [
+            "src/helpers.php"
+        ]
     }
 }
